--- a/BalancoMensal/app/src/main/res/layout/add_data.xml
+++ b/BalancoMensal/app/src/main/res/layout/add_data.xml
@@ -114,6 +114,7 @@
         android:layout_marginTop="64dp"
         android:layout_marginRight="128dp"
         android:layout_marginBottom="0dp"
+        android:background="@drawable/my_button"
         android:text="Adicionar" />
 
 </LinearLayout>
