--- a/BalancoMensal/app/src/main/res/layout/add_data.xml
+++ b/BalancoMensal/app/src/main/res/layout/add_data.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/add_data"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -8,11 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="32dp"
-        >
+        android:layout_margin="16dp">
 
         <Button
 
@@ -20,10 +17,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="despesa"
-            android:text="Despesa"
             android:background="@drawable/my_button"
-            />
+            android:onClick="despesa"
+            android:text="Despesa" />
 
         <Space
             android:layout_width="wrap_content"
@@ -35,10 +31,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="renda"
-            android:text="Renda"
             android:background="@drawable/my_button"
-            />
+            android:onClick="renda"
+            android:text="Renda" />
 
     </LinearLayout>
 
@@ -46,22 +41,16 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="32dp"
+        android:layout_margin="16dp"
         android:ems="10"
         android:hint="Nome"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"/>
 
     <EditText
         android:id="@+id/editText5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="32dp"
+        android:layout_margin="16dp"
         android:ems="10"
         android:hint="DD/MM"
         android:inputType="date" />
@@ -69,10 +58,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="32dp"
+        android:layout_margin="16dp"
         android:orientation="horizontal">
 
         <TextView
@@ -96,14 +82,28 @@
             android:inputType="number" />
     </LinearLayout>
 
+    <CheckBox
+        android:id="@+id/fixa"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:checked="false"
+        android:onClick="checkFixa" />
+
+    <EditText
+        android:id="@+id/duracao"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:ems="10"
+        android:hint="Duração (Meses)"
+        android:inputType="number" />
+
     <Spinner
         android:id="@+id/category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="32dp"
+        android:layout_margin="16dp"
         android:spinnerMode="dropdown" />
 
     <Button
@@ -111,9 +111,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="128dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:layout_marginRight="128dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/my_button"
         android:text="Adicionar" />
 
