--- a/BalancoMensal/app/src/main/res/layout/add_data.xml
+++ b/BalancoMensal/app/src/main/res/layout/add_data.xml
@@ -66,7 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="center_horizontal"
             android:text="R$"
             android:textAllCaps="false"
             android:textSize="24sp"
@@ -115,6 +115,7 @@
         android:layout_marginRight="128dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/my_button"
+        android:onClick="despesa"
         android:text="Adicionar" />
 
 </LinearLayout>
