--- a/BalancoMensal/app/src/main/res/drawable/button_add.xml
+++ b/BalancoMensal/app/src/main/res/drawable/button_add.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true" >
-        <shape android:shape="rectangle"  >
+    <item android:state_pressed="true">
+        <shape android:shape="oval">
             <corners android:radius="3dip" />
             <stroke android:width="1dip" android:color="#707070" />
             <solid android:color="#909090"/>
         </shape>
     </item>
     <item>
-        <shape android:shape="rectangle">
+        <shape android:shape="oval">
             <corners android:radius="3dip"/>
             <stroke android:width="1dip" android:color="#a0a0a0" />
             <solid android:color="#d0d0d0"/>
