--- a/BalancoMensal/app/src/main/res/layout/add_data.xml
+++ b/BalancoMensal/app/src/main/res/layout/add_data.xml
@@ -37,7 +37,7 @@
     </LinearLayout>
 
     <EditText
-        android:id="@+id/name"
+        android:id="@+id/nome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -46,7 +46,7 @@
         android:inputType="textPersonName"/>
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -72,7 +72,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/valor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -99,7 +99,7 @@
         android:inputType="number" />
 
     <Spinner
-        android:id="@+id/category"
+        android:id="@+id/categoria"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
