--- a/BalancoMensal/app/src/main/res/layout/tela_mes.xml
+++ b/BalancoMensal/app/src/main/res/layout/tela_mes.xml
@@ -1,43 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/add_data"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent">
+
+    <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="46dp"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Balanço:" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Balanço:" />
 
-        <TextView
-            android:id="@+id/total"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/total"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView" />
+        </LinearLayout>
 
-    <com.example.balancomensal.Calendario
+        <com.example.balancomensal.Calendario
         android:id="@+id/calendario"
         android:layout_width="match_parent"
         android:layout_height="249dp" />
 
-    <com.example.balancomensal.ListaMov
+        <com.example.balancomensal.ListaMov
         android:id="@+id/lista"
         android:layout_width="match_parent"
-        android:layout_height="130dp" />
+        android:layout_height="100dp" />
 
-    <com.example.balancomensal.Pizza
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            android:gravity="center"
+            android:text="Divisão por Categoria"
+            android:textColor="#000000"
+            android:textSize="24sp" />
+
+        <com.example.balancomensal.Pizza
         android:id="@+id/pizza"
         android:layout_width="match_parent"
         android:layout_height="246dp" />
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
