--- a/BalancoMensal/app/src/main/res/layout/fixas.xml
+++ b/BalancoMensal/app/src/main/res/layout/fixas.xml
@@ -8,16 +8,27 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="24dp"
+            android:text="Despesas Fixas:" />
+
         <com.example.balancomensal.ListaFixa
             android:id="@+id/lista2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_margin="24dp"
+            android:layout_marginTop="24dp" />
 
         <Button
             android:id="@+id/return_btn2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="24dp"
             android:text="Voltar" />
+
     </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
