--- a/BalancoMensal/app/src/main/res/drawable/button_add.xml
+++ b/BalancoMensal/app/src/main/res/drawable/button_add.xml
@@ -3,15 +3,15 @@
     <item android:state_pressed="true">
         <shape android:shape="oval">
             <corners android:radius="3dip" />
-            <stroke android:width="4dip" android:color="#707070" />
-            <solid android:color="#909090"/>
+            <stroke android:width="4dip" android:color="#5800F8" />
+            <solid android:color="#6000FF"/>
         </shape>
     </item>
     <item>
         <shape android:shape="oval">
             <corners android:radius="4dip"/>
-            <stroke android:width="2dip" android:color="#a0a0a0" />
-            <solid android:color="#d0d0d0"/>
+            <stroke android:width="2dip" android:color="#3800D8" />
+            <solid android:color="#4000DF"/>
         </shape>
     </item>
 </selector>
