--- a/BalancoMensal/app/src/main/res/drawable/my_button.xml
+++ b/BalancoMensal/app/src/main/res/drawable/my_button.xml
@@ -2,16 +2,17 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
-            <corners android:radius="3dip" />
-            <stroke android:width="1dip" android:color="#707070" />
-            <solid android:color="#909090"/>
+            <corners android:radius="3dip"/>
+            <stroke android:width="4dip" android:color="#5800F8" />
+            <solid android:color="#6000FF"/>
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
+
             <corners android:radius="3dip"/>
-            <stroke android:width="1dip" android:color="#a0a0a0" />
-            <solid android:color="#d0d0d0"/>
+            <stroke android:width="2dip" android:color="#3800D8" />
+            <solid android:color="#4000DF"/>
         </shape>
     </item>
 </selector>
