--- a/BalancoMensal/app/src/main/res/layout/add_data.xml
+++ b/BalancoMensal/app/src/main/res/layout/add_data.xml
@@ -19,7 +19,8 @@
             android:layout_weight="1"
             android:background="@drawable/my_button"
             android:onClick="despesa"
-            android:text="Despesa" />
+            android:text="Despesa"
+            android:textColor="#F0F0F0" />
 
         <Space
             android:layout_width="wrap_content"
@@ -32,7 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/my_button"
-            android:text="Renda" />
+            android:text="Renda"
+            android:textColor="#F0F0F0" />
 
     </LinearLayout>
 
@@ -105,16 +107,35 @@
         android:layout_margin="16dp"
         android:spinnerMode="dropdown" />
 
-    <Button
-        android:id="@+id/btn_save"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="128dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="128dp"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/my_button"
-        android:onClick="despesa"
-        android:text="Adicionar" />
+        android:layout_height="match_parent"
+        android:layout_margin="16dp">
+
+        <Button
+
+            android:id="@+id/btn_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/my_button"
+            android:text="Cancelar"
+            android:textColor="#F0F0F0" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/btn_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/my_button"
+            android:text="Salvar"
+            android:textColor="#F0F0F0" />
+
+    </LinearLayout>
 
 </LinearLayout>
