--- a/BalancoMensal/app/src/main/res/layout/tela_mes.xml
+++ b/BalancoMensal/app/src/main/res/layout/tela_mes.xml
@@ -1,74 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/add_data"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_width="match_parent">
+    android:padding="24dp">
 
     <ScrollView
         android:id="@+id/scroll"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent">
-
-    <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="16dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="46dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Balanço:"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="TextView"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <com.example.balancomensal.Calendario
+                android:id="@+id/calendario"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <com.example.balancomensal.ListaMov
+                android:id="@+id/lista"
+                android:layout_width="164dp"
+                android:layout_height="122dp" />
 
             <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Balanço:" />
+                android:background="#FFFFFF"
+                android:gravity="center"
+                android:text="Divisão por Categoria"
+                android:textColor="#000000"
+                android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/total"
-                android:layout_width="wrap_content"
+            <com.example.balancomensal.Pizza
+                android:id="@+id/pizza"
+                android:layout_width="match_parent"
+                android:layout_height="246dp" />
+
+            <Button
+                android:id="@+id/return_btn"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
+                android:layout_margin="24dp"
+                android:background="@drawable/my_button"
+                android:text="Voltar"
+                android:textColor="#F0F0F0" />
+
         </LinearLayout>
-
-        <com.example.balancomensal.Calendario
-            android:id="@+id/calendario"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <com.example.balancomensal.ListaMov
-            android:id="@+id/lista"
-            android:layout_width="164dp"
-            android:layout_height="122dp" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#FFFFFF"
-            android:gravity="center"
-            android:text="Divisão por Categoria"
-            android:textColor="#000000"
-            android:textSize="24sp" />
-
-        <com.example.balancomensal.Pizza
-        android:id="@+id/pizza"
-        android:layout_width="match_parent"
-        android:layout_height="246dp" />
-
-        <Button
-            android:id="@+id/return_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/my_button"
-            android:text="Voltar" />
-
-    </LinearLayout>
-</ScrollView>
+    </ScrollView>
 
     <com.example.balancomensal.Meses
         android:id="@+id/menu2"
